--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -38,5 +38,34 @@
       }
     });
     </script>
+    <script>
+      CMS.registerEditorComponent({
+        // Internal id of the component
+        id: "text-on-image",
+        // Visible label
+        label: "textOnImage",
+        // Fields the user need to fill out when adding an instance of the component
+        fields: [{name: 'Text', label: 'text', widget: 'markdown'}, {name: 'Image', label: 'image', widget: 'image', allow_multiple: false}],
+        // Pattern to identify a block as being an instance of this component
+        pattern: /text-on-image (\S+)\s/,
+        // Function to extract data elements from the regexp match
+        fromBlock: function(match) {
+          return {
+            id: match[1]
+          };
+        },
+        // Function to create a text block from an instance of this component
+        toBlock: function(obj) {
+          return 'text-on-image ' + obj.id;
+        },
+        // Preview output for this component. Can either be a string or a React component
+        // (component gives better render performance)
+        toPreview: function(obj) {
+          return (
+            '<img src="http://img.youtube.com/vi/' + obj.id + '/maxresdefault.jpg" alt="Youtube Video"/>'
+          );
+        }
+      });
+      </script>
 </body>
 </html>
