--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,42 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  <title>Content Manager</title>
-</head>
-<body>
-  <!-- Include the script that builds the page and powers Netlify CMS -->
-  <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-  <script>
-    CMS.registerEditorComponent({
-      // Internal id of the component
-      id: "youtube",
-      // Visible label
-      label: "Youtube",
-      // Fields the user need to fill out when adding an instance of the component
-      fields: [{name: 'id', label: 'Youtube Video ID', widget: 'string'}],
-      // Pattern to identify a block as being an instance of this component
-      pattern: /youtube (\S+)\s/,
-      // Function to extract data elements from the regexp match
-      fromBlock: function(match) {
-        return {
-          id: match[1]
-        };
-      },
-      // Function to create a text block from an instance of this component
-      toBlock: function(obj) {
-        return 'youtube ' + obj.id;
-      },
-      // Preview output for this component. Can either be a string or a React component
-      // (component gives better render performance)
-      toPreview: function(obj) {
-        return (
-          '<img src="http://img.youtube.com/vi/' + obj.id + '/maxresdefault.jpg" alt="Youtube Video"/>'
-        );
-      }
-    });
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <title>Content Manager</title>
+  </head>
+  <body>
+    <!-- Include the script that builds the page and powers Netlify CMS -->
+    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+    <script>
+      CMS.registerEditorComponent({
+        // Internal id of the component
+        id: "youtube",
+        // Visible label
+        label: "Youtube",
+        // Fields the user need to fill out when adding an instance of the component
+        fields: [{ name: "id", label: "Youtube Video ID", widget: "string" }],
+        // Pattern to identify a block as being an instance of this component
+        pattern: /youtube (\S+)\s/,
+        // Function to extract data elements from the regexp match
+        fromBlock: function (match) {
+          return {
+            id: match[1],
+          };
+        },
+        // Function to create a text block from an instance of this component
+        toBlock: function (obj) {
+          return "youtube " + obj.id;
+        },
+        // Preview output for this component. Can either be a string or a React component
+        // (component gives better render performance)
+        toPreview: function (obj) {
+          return (
+            '<img src="http://img.youtube.com/vi/' +
+            obj.id +
+            '/maxresdefault.jpg" alt="Youtube Video"/>'
+          );
+        },
+      });
     </script>
     <script>
       CMS.registerEditorComponent({
@@ -45,27 +47,38 @@
         // Visible label
         label: "textOnImage",
         // Fields the user need to fill out when adding an instance of the component
-        fields: [{name: 'Text', label: 'text', widget: 'markdown'}, {name: 'Image', label: 'image', widget: 'image', allow_multiple: false}],
+        fields: [
+          { name: "text", label: "Text", widget: "markdown" },
+          {
+            name: "image",
+            label: "Image",
+            widget: "image",
+            allow_multiple: false,
+          },
+        ],
         // Pattern to identify a block as being an instance of this component
         pattern: /text-on-image (\S+)\s/,
         // Function to extract data elements from the regexp match
-        fromBlock: function(match) {
+        fromBlock: function (match) {
           return {
-            id: match[1]
+            text: match[1],
+            text: match[2],
           };
         },
         // Function to create a text block from an instance of this component
-        toBlock: function(obj) {
-          return 'text-on-image ' + obj.id;
+        toBlock: function (obj) {
+          return "text-on-image " + obj.id;
         },
         // Preview output for this component. Can either be a string or a React component
         // (component gives better render performance)
-        toPreview: function(obj) {
+        toPreview: function (obj) {
           return (
-            '<img src="http://img.youtube.com/vi/' + obj.id + '/maxresdefault.jpg" alt="Youtube Video"/>'
+            '<img src="http://img.youtube.com/vi/' +
+            obj.id +
+            '/maxresdefault.jpg" alt="Youtube Video"/>'
           );
-        }
+        },
       });
-      </script>
-</body>
+    </script>
+  </body>
 </html>
