--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -10,6 +10,8 @@
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
     <script>
+      import Image from "next/image";
+
       CMS.registerEditorComponent({
         // Internal id of the component
         id: "youtube",
@@ -60,7 +62,7 @@
         pattern: /text-on-image (\S+)\s/,
         // Function to extract data elements from the regexp match
         fromBlock: function (match) {
-          console.log("match",match);
+          console.log("match", match);
           return {
             text: match[1],
             image: match[2],
@@ -68,16 +70,12 @@
         },
         // Function to create a text block from an instance of this component
         toBlock: function (obj) {
-          return "text-on-image " + obj.text +  ' ' + obj.image;
+          return "text-on-image " + obj.text + " " + obj.image;
         },
         // Preview output for this component. Can either be a string or a React component
         // (component gives better render performance)
         toPreview: function (obj) {
-          return (
-            '<img src="http://img.youtube.com/vi/' +
-            obj.id +
-            '/maxresdefault.jpg" alt="Youtube Video"/>'
-          );
+          return <Image priority src={obj.image} height={200} width={200} />;
         },
       });
     </script>
