--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -59,7 +59,7 @@
           },
         ],
         // Pattern to identify a block as being an instance of this component
-        pattern: /text-on-image (\S+)\s (\S+)\s/,
+        pattern: /text-on-image (\S+)\s/,
         // Function to extract data elements from the regexp match
         fromBlock: function (match) {
           console.log("match", match);
