--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -43,8 +43,49 @@
         // Preview output for this component. Can either be a string or a React component
         // (component gives better render performance)
         toPreview: function (obj) {
-          return (`<img src=${obj.text} height=200 width=200 />`);
+          return `<img src=${obj.text} height=200 width=200 />`;
         },
+      });
+    </script>
+    <script>
+      CMS.registerEditorComponent({
+        label: "Image",
+        id: "image",
+        fromBlock: (match) =>
+          match && {
+            image: match[2],
+            alt: match[1],
+            title: match[4],
+          },
+        toBlock: ({ alt, image, title }) =>
+          `![${alt || ""}](${image || ""}${
+            title ? ` "${title.replace(/"/g, '\\"')}"` : ""
+          })`,
+        // eslint-disable-next-line react/display-name
+        toPreview: ({ alt, image, title }, getAsset, fields) => {
+          const imageField = fields?.find((f) => f.get("widget") === "image");
+          const src = getAsset(image, imageField);
+          return <img src={src || ""} alt={alt || ""} title={title || ""} />;
+        },
+        pattern: /^!\[(.*)\]\((.*?)(\s"(.*)")?\)$/,
+        fields: [
+          {
+            label: "Image",
+            name: "image",
+            widget: "image",
+            media_library: {
+              allow_multiple: false,
+            },
+          },
+          {
+            label: "Alt Text",
+            name: "alt",
+          },
+          {
+            label: "Title",
+            name: "title",
+          },
+        ],
       });
     </script>
   </body>
