--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -65,7 +65,7 @@
         toPreview: ({ alt, image, title }, getAsset, fields) => {
           const imageField = fields?.find((f) => f.get("widget") === "image");
           const src = getAsset(image, imageField);
-          return <img src={src || ""} alt={alt || ""} title={title || ""} />;
+          return (<img src={src || ""} alt={alt || ""} title={title || ""} />);
         },
         pattern: /^!\[(.*)\]\((.*?)(\s"(.*)")?\)$/,
         fields: [
