testing custom component

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-    <script>
+    <!-- <script>
       CMS.registerEditorComponent({
         // Internal id of the component
         id: "text-on-image",
@@ -46,7 +46,7 @@
           return `<img src=${obj.text} height=200 width=200 />`;
         },
       });
-    </script>
+    </script> -->
     <script>
       CMS.registerEditorComponent({
         label: "Image",
