testing custom component

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -78,12 +78,13 @@
             },
           },
           {
-            label: "Alt Text",
-            name: "alt",
-          },
-          {
             label: "Title",
             name: "title",
+          },
+          {
+            label: "Alt Text",
+            name: "alt",
+            widget: "markdown"
           },
         ],
       });
