--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -47,6 +47,48 @@
         },
       });
     </script> -->
+    <!-- <script>
+      CMS.registerEditorComponent({
+        label: "Image",
+        id: "image",
+        fromBlock: (match) =>
+          match && {
+            image: match[2],
+            alt: match[1],
+            title: match[4],
+          },
+        toBlock: ({ alt, image, title }) =>
+          `![${alt || ""}](${image || ""}${
+            title ? ` "${title.replace(/"/g, '\\"')}"` : ""
+          })`,
+        // eslint-disable-next-line react/display-name
+        toPreview: ({ alt, image, title }, getAsset, fields) => {
+          const imageField = fields?.find((f) => f.get("widget") === "image");
+          const src = getAsset(image, imageField);
+          return (`<img src=${src || ""} alt=${alt || ""} title=${title || ""} />`);
+        },
+        pattern: /^!\[(.*)\]\((.*?)(\s"(.*)")?\)$/,
+        fields: [
+          {
+            label: "Image",
+            name: "image",
+            widget: "image",
+            media_library: {
+              allow_multiple: false,
+            },
+          },
+          {
+            label: "Title",
+            name: "title",
+          },
+          {
+            label: "Alt Text",
+            name: "alt",
+          },
+        ],
+      });
+    </script> -->
+
     <script>
       CMS.registerEditorComponent({
         label: "Image",
@@ -84,10 +126,10 @@
           {
             label: "Alt Text",
             name: "alt",
-            widget: "markdown"
           },
         ],
       });
     </script>
+    
   </body>
 </html>
