testing custom component

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -89,7 +89,7 @@
       });
     </script> -->
 
-    <script>
+    <!-- <script>
       CMS.registerEditorComponent({
         label: "Image",
         id: "image",
@@ -129,7 +129,7 @@
           },
         ],
       });
-    </script>
+    </script> -->
     
   </body>
 </html>
