--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -98,16 +98,19 @@
             image: match[2],
             alt: match[1],
             title: match[4],
+            more: match[5],
           },
-        toBlock: ({ alt, image, title }) =>
+        toBlock: ({ alt, image, title, more }) =>
           `![${alt || ""}](${image || ""}${
             title ? ` "${title.replace(/"/g, '\\"')}"` : ""
-          })`,
+          })\n${more}`,
         // eslint-disable-next-line react/display-name
         toPreview: ({ alt, image, title }, getAsset, fields) => {
           const imageField = fields?.find((f) => f.get("widget") === "image");
           const src = getAsset(image, imageField);
-          return (`<img src=${src || ""} alt=${alt || ""} title=${title || ""} />`);
+          return `<img src=${src || ""} alt=${alt || ""} title=${
+            title || ""
+          } />`;
         },
         pattern: /^!\[(.*)\]\((.*?)(\s"(.*)")?\)$/,
         fields: [
@@ -122,11 +125,15 @@
           {
             label: "Alt Text",
             name: "alt",
-            widget: "text"
           },
           {
             label: "Title",
             name: "title",
+          },
+          {
+            label: "More Text",
+            name: "more",
+            widget: "text",
           },
         ],
       });
