--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -9,90 +9,10 @@
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-    <!-- <script>
-      CMS.registerEditorComponent({
-        // Internal id of the component
-        id: "text-on-image",
-        // Visible label
-        label: "textOnImage",
-        // Fields the user need to fill out when adding an instance of the component
-        fields: [
-          { name: "text", label: "Text", widget: "markdown" },
-          {
-            name: "image",
-            label: "Image",
-            widget: "image",
-            allow_multiple: false,
-          },
-        ],
-        // Pattern to identify a block as being an instance of this component
-        pattern: /text-on-image (\S+)\s/,
-        // Function to extract data elements from the regexp match
-        fromBlock: function (match) {
-          console.log("match", match);
-          return {
-            text: match[1],
-            // image: match[2],
-          };
-        },
-        // Function to create a text block from an instance of this component
-        toBlock: function (obj) {
-          // return "text-on-image " + obj.text + " " + obj.image;
-          return "text-on-image " + obj.text;
-        },
-        // Preview output for this component. Can either be a string or a React component
-        // (component gives better render performance)
-        toPreview: function (obj) {
-          return `<img src=${obj.text} height=200 width=200 />`;
-        },
-      });
-    </script> -->
-    <!-- <script>
-      CMS.registerEditorComponent({
-        label: "Image",
-        id: "image",
-        fromBlock: (match) =>
-          match && {
-            image: match[2],
-            alt: match[1],
-            title: match[4],
-          },
-        toBlock: ({ alt, image, title }) =>
-          `![${alt || ""}](${image || ""}${
-            title ? ` "${title.replace(/"/g, '\\"')}"` : ""
-          })`,
-        // eslint-disable-next-line react/display-name
-        toPreview: ({ alt, image, title }, getAsset, fields) => {
-          const imageField = fields?.find((f) => f.get("widget") === "image");
-          const src = getAsset(image, imageField);
-          return (`<img src=${src || ""} alt=${alt || ""} title=${title || ""} />`);
-        },
-        pattern: /^!\[(.*)\]\((.*?)(\s"(.*)")?\)$/,
-        fields: [
-          {
-            label: "Image",
-            name: "image",
-            widget: "image",
-            media_library: {
-              allow_multiple: false,
-            },
-          },
-          {
-            label: "Title",
-            name: "title",
-          },
-          {
-            label: "Alt Text",
-            name: "alt",
-          },
-        ],
-      });
-    </script> -->
-
     <script>
       CMS.registerEditorComponent({
-        label: "Image",
-        id: "image",
+        label: "TextOnImage",
+        id: "textOnImage",
         fromBlock: (match) =>
           match && {
             image: match[2],
@@ -112,7 +32,6 @@
             title || ""
           } />`;
         },
-        // pattern: /^!\[(.*)\]\((.*?)(\s"(.*)")?\)$/,
         pattern: /^!\[(.*)\]\((.*?)(\s"(.*)")?\)\[([\S\s]*)\]\n/,
         fields: [
           {
