working version of custom image cms widget

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -51,7 +51,7 @@
             name: "title",
           },
           {
-            label: "More Text",
+            label: "Text on image",
             name: "more",
             widget: "text",
           },
