vimeo editor component

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -108,7 +108,8 @@
       );
     </script>
     <script>
-      //  Vimeo embed editor component, should put these in a cms.ts file like this one https://github.com/mwood23/netlify-cms-responsive-vimeo-editor-widget
+      // Vimeo embed editor component, should put these in a cms.ts file like this one https://github.com/mwood23/netlify-cms-responsive-vimeo-editor-widget
+      // adapted from: https://github.com/mwood23/netlify-cms-responsive-vimeo-editor-widget/blob/master/index.js
       CMS.registerEditorComponent({
         // Internal id of the component
         id: "vimeo",
