--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -139,7 +139,7 @@
         },
       });
     </script>
-    <!-- <script>
+    <script>
       CMS.registerEditorComponent({
         // Internal id of the component
         id: "collapsible-note",
@@ -208,6 +208,6 @@
       `;
         },
       });
-    </script> -->
+    </script>
   </body>
 </html>
