--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -190,7 +190,7 @@
       <details>
         <summary>${data.summary}</summary>
       
-        ${data.detail}
+        ${data.details}
       
       </details>
       `;
